# ServerTech

./: .gitignore  README.md
boost_study/asio_study/: CMakeLists.txt
boost_study/asio_study/async_tcp_server/: CMakeLists.txt  main.cpp
boost_study/asio_study/binding_arg_completion_handler/: CMakeLists.txt  timer3.cpp
boost_study/asio_study/hello_boost/: CMakeLists.txt  hello_boost.cpp
boost_study/asio_study/memfn_completion_handler/: CMakeLists.txt  timer4.cpp
boost_study/asio_study/sync_completion_handler_in_multithread/: CMakeLists.txt  timer5.cpp
boost_study/asio_study/sync_tcp_client/: CMakeLists.txt  main.cpp
boost_study/asio_study/sync_tcp_server/: CMakeLists.txt  main.cpp
boost_study/asio_study/timer_async/: CMakeLists.txt  timer_async.cpp
boost_study/asio_study/timer_sync/: CMakeLists.txt  timer_sync.cpp
boost_study/hello_boost/boost_version/: CMakeLists.txt  main.cpp
cmake_tutorial/full_sample/src/: CMakeLists.txt  main.cpp
cmake_tutorial/hello_lib/src/: CMakeLists.txt  hello.cpp  hello.h
conc-in-action/: CMakeLists.txt
conc-in-action/1-hello-thread/: CMakeLists.txt  hello_thread.cpp
conc-in-action/2-managing-threads/: CMakeLists.txt  joining_thread.h  managing_threads.cpp  parallel_accumulate.h  scoped_thread.h  thread_guard.h
conc-in-action/3-sharing-data/: CMakeLists.txt  deadlock_avoid.h  dns_cache.h  protect_list.h  random_util.cpp  random_util.h  sharing_data.cpp  threadsafe_stack.h
conc-in-action/4-sync/: CMakeLists.txt  async_example.cpp  async_example.h  barrier_example.cpp  barrier_example.h  future_promise.cpp  future_promise.h  future_then.cpp  future_then.h  latch_example.cpp  latch_example.h  packaged_task.h  sync.cpp  threadsafe_queue.h  time_limit.cpp  time_limit.h  using_sync_op_example.cpp  using_sync_op_example.h
conc-in-action/5-memo-model-atomic/: CMakeLists.txt  acquire_release.cpp  acquire_release.h  acquire_release_opt.cpp  acquire_release_opt.h  atomic_example.cpp  atomic_example.h  consume.cpp  consume.h  fence.cpp  fence.h  fence_2.cpp  fence_2.h  mem_model.cpp  multi_relaxed.cpp  multi_relaxed.h  print.cpp  read_write_example.cpp  read_write_example.h  relaxed.cpp  relaxed.h  release_sequence.cpp  release_sequence.h  seq_cst.cpp  seq_cst.h  spinlock.cpp  spinlock.h  transitive.cpp  transitive.h  transitive_opt.cpp  transitive_opt.h
conc-in-action/6-conc-data-struct/: CMakeLists.txt  guidelines.md  queue.h  threadsafe_list.h  threadsafe_lookup_table.h  threadsafe_queue.h  threadsafe_queue_opt.h  threadsafe_stack.h
conc-in-action/7-conc-lock-free/: CMakeLists.txt  conc_lock_free.cpp  hazard_pointer.h  lock_free_stack.cpp  lock_free_stack.h  spinlock.h
conc-in-action/atm_example/: CMakeLists.txt  atm.h  atm_example.cpp  atm_machine.h  bank_machine.h  dispatcher.h  interface_machine.h  message.h  queue.h  receiver.h  sender.h  templateDispatcher.h
cpp-coroutines/: CMakeLists.txt
cpp-coroutines/fib_gen/: CMakeLists.txt  fib_gen.cpp
cpp-coroutines/generator_example/: generator_example.cpp
cpp-coroutines/hello_co_await/: CMakeLists.txt  hello_co_await.cpp
cpp-coroutines/hello_co_return/: CMakeLists.txt  hello_co_return.cpp
cpp-coroutines/hello_co_yield/: .hello_co_yield.cpp.swp  CMakeLists.txt  hello_co_yield.cpp
cpp-coroutines/hello_coroutine/: CMakeLists.txt
cpp-coroutines/resumable_thing/: CMakeLists.txt  resumable_thing.cpp
cpp-coroutines/switch_2_new_thread/: switch_2_new_thread.cpp
cpp-coroutines/understand_compiler_transform/: CMakeLists.txt  task.h
cpp-coroutines/understand_promise/: CMakeLists.txt
cpp-coroutines/understand_symmetric_transfer/: main.cpp  task.h
cpp-lambda-story/cpp_11/: CMakeLists.txt
cpp-lambda-story/cpp_11/calling-c-style/: CMakeLists.txt  calling-c-style.cpp
cpp-lambda-story/cpp_11/calling-function-ptr/: CMakeLists.txt  calling-funtion-ptr.cpp
cpp-lambda-story/cpp_11/calling-lambda/: CMakeLists.txt  calling-lambda.cpp
cpp-lambda-story/cpp_11/capture_const/: CMakeLists.txt  capture_const.cpp
cpp-lambda-story/cpp_11/capture_global/: CMakeLists.txt  capture_global.cpp
cpp-lambda-story/cpp_11/capture_mem_this/: CMakeLists.txt  capture_mem_this.cpp
cpp-lambda-story/cpp_11/capture_moveable_only/: CMakeLists.txt  capture_moveable_only.cpp
cpp-lambda-story/cpp_11/capture_parameter_pack/: CMakeLists.txt  capture_parameter_pack.cpp
cpp-lambda-story/cpp_11/capture_static/: CMakeLists.txt  capture_static.cpp
cpp-lambda-story/cpp_11/compCounter/: CMakeLists.txt  compCounter.cpp
cpp-lambda-story/cpp_11/copy_lambda/: CMakeLists.txt  copy_lambda.cpp
cpp-lambda-story/cpp_11/function_vs_lambda/: CMakeLists.txt  function_vs_lambda.cpp
cpp-lambda-story/cpp_11/hello_lambda/: CMakeLists.txt  hello_lambda.cpp
cpp-lambda-story/cpp_11/html-generator/: CMakeLists.txt  html-generator.cpp
cpp-lambda-story/cpp_11/inherited-class/: CMakeLists.txt  inherited-class.cpp
cpp-lambda-story/cpp_11/inherited-lambda/: CMakeLists.txt  inherited-lambda.cpp
cpp-lambda-story/cpp_11/inherited-lambda2/: CMakeLists.txt  inherited-lambda2.cpp
cpp-lambda-story/cpp_11/lambda_2_function_ptr/: CMakeLists.txt  lambda_2_function_ptr.cpp
cpp-lambda-story/cpp_11/lambda_capture/: CMakeLists.txt  lambda_capture.cpp
cpp-lambda-story/cpp_11/return_lambda/: CMakeLists.txt  return_lambda.cpp
cpp-lambda-story/cpp_11/return_literal/: CMakeLists.txt  return_literal.cpp
cpp-lambda-story/cpp_14/: CMakeLists.txt
cpp-lambda-story/cpp_17/: CMakeLists.txt
cpp-lambda-story/cpp_98/: CMakeLists.txt
cpp-lambda-story/cpp_98/func/: CMakeLists.txt
cpp-tpl-meta/c02-Traits_TypeMainpulation/: CMakeLists.txt
discover_modern_cpp/: CMakeLists.txt
io/SkyNet/: .clang-format  CMakeLists.txt
meta_deep_learn/: CMakeLists.txt  README.md
meta_deep_learn/crtp/: CMakeLists.txt  hello_crtp.cpp
meta_deep_learn/exercise/: hello_exe.cpp
meta_deep_learn/meta_basic/: hello_func.cpp
meta_deep_learn/meta_control/: CMakeLists.txt  hello_control.cpp
meta_deep_learn/meta_tpl/: CMakeLists.txt  hello_tpl.cpp
meta_deep_learn/var_type_dict/: CMakeLists.txt  hello_var_type_dict.cpp  vartypedict.h
(+713 files in other folders)
